--- a/configs/package.json
+++ b/configs/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "virmator frontend build",
         "compile": "virmator compile",
-        "docs:update": "virmator code-in-markdown",
+        "docs:update": "virmator docs",
         "format": "virmator format",
         "preview": "virmator frontend preview",
         "publish": "virmator publish \"npm run compile && npm run test:all\"",
@@ -13,7 +13,7 @@
         "test": "virmator test",
         "test:all": "concurrently --colors --kill-others-on-fail -c auto --names types,tests,spelling,format,docs \"npm run test:types\" \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\"",
         "test:coverage": "npm run test coverage",
-        "test:docs": "virmator code-in-markdown check",
+        "test:docs": "virmator docs check",
         "test:format": "virmator format check",
         "test:spelling": "virmator spellcheck",
         "test:types": "tsc --noEmit",
