--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "9.0.1",
+    "version": "9.0.2",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -49,6 +49,7 @@
         "concurrently": "^8.2.1",
         "glob": "^8.1.0",
         "glob-promise": "^6.0.5",
+        "mono-vir": "^0.1.6",
         "semver": "^7.5.4",
         "simple-git": "^3.20.0",
         "type-fest": "^4.4.0"
@@ -71,7 +72,7 @@
         "chai": "^4.3.10",
         "cspell": "^7.3.7",
         "dependency-cruiser": "^14.1.1",
-        "element-vir": "^16.4.2",
+        "element-vir": "^16.4.5",
         "esbuild": "^0.19.4",
         "fs-extra": "^11.1.1",
         "istanbul-smart-text-reporter": "^1.1.2",
@@ -93,7 +94,7 @@
         "tsconfig-paths": "^4.2.0",
         "typedoc": "^0.25.2",
         "typescript": "^5.2.2",
-        "virmator": "^8.0.5",
+        "virmator": "^9.0.1",
         "vite": "^4.4.11",
         "vite-tsconfig-paths": "^4.2.1"
     },
