--- a/configs/tsconfig.json
+++ b/configs/tsconfig.json
@@ -8,7 +8,8 @@
         "./coverage",
         "./dist",
         "./node_modules",
-        "./test-files"
+        "./test-files",
+        "./ts.out"
     ],
     "extends": "virmator/base-configs/base-tsconfig.json"
 }
