enable tsconfig error truncation

--- a/test-files/update-configs/full-repo/.gitignore
+++ b/test-files/update-configs/full-repo/.gitignore
@@ -8,5 +8,7 @@ generated-config-*
 graphics/
 node_modules/
 src/all-files-for-code-coverage.test.ts
+ts.out
+tsconfig.tsbuildinfo
 
 ./something-that-doesn't-exist/
