update tests and formatting

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "9.2.0",
+    "version": "10.0.0",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -33,7 +33,7 @@
         "docs": "npm run compile && ts-node src/scripts/save-help-message.ts && md-code README.md",
         "docs:check": "npm run compile && ts-node src/scripts/save-help-message.ts check && md-code --check README.md",
         "format": "npm run format:base -- --write --list-different",
-        "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\"",
+        "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\" --config .prettierrc.js",
         "publish": "virmator publish \"npm run test:all\"",
         "test": "npm run compile && test-as-package mocha --config mocha.config.js",
         "test:all": "npm ci && concurrently --color --kill-others-on-fail -c auto --names tests,spelling,format,docs \"npm run compile && npm run test\" \"npm run test:spelling -- --no-progress\" \"npm run test:format\" \"npm run docs:check\"",
@@ -71,7 +71,7 @@
         "@web/test-runner-visual-regression": "^0.8.2",
         "chai": "^4.3.10",
         "cspell": "^7.3.8",
-        "dependency-cruiser": "^14.1.2",
+        "dependency-cruiser": "^15.0.0",
         "element-vir": "^16.5.0",
         "esbuild": "^0.19.5",
         "fs-extra": "^11.1.1",
@@ -80,14 +80,14 @@
         "mocha": "^10.2.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
         "npm-check-updates": "~16.12.3",
-        "prettier": "^2.8.8",
-        "prettier-plugin-interpolated-html-tags": "^0.0.4",
-        "prettier-plugin-jsdoc": "^0.4.2",
-        "prettier-plugin-multiline-arrays": "^2.0.0",
+        "prettier": "^3.0.3",
+        "prettier-plugin-interpolated-html-tags": "^1.0.1",
+        "prettier-plugin-jsdoc": "^1.1.1",
+        "prettier-plugin-multiline-arrays": "^3.0.0",
         "prettier-plugin-organize-imports": "^3.2.3",
         "prettier-plugin-packagejson": "^2.4.6",
-        "prettier-plugin-sort-json": "^2.0.0",
-        "prettier-plugin-toml": "^0.3.1",
+        "prettier-plugin-sort-json": "^3.1.0",
+        "prettier-plugin-toml": "^1.0.0",
         "test-as-package": "^0.0.4",
         "test-established-expectations": "^0.5.0",
         "ts-node": "^10.9.1",
