--- a/base-configs/tsconfig.base.json
+++ b/base-configs/tsconfig.base.json
@@ -6,10 +6,9 @@
         "exactOptionalPropertyTypes": true,
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
-        "module": "CommonJS",
-        "moduleResolution": "Node",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "noEmitOnError": false,
-        "noErrorTruncation": true,
         "noImplicitAny": true,
         "noImplicitOverride": true,
         "noImplicitReturns": true,
@@ -25,7 +24,7 @@
     },
     "ts-node": {
         "compilerOptions": {
-            "module": "CommonJS"
+            "module": "NodeNext"
         },
         "transpileOnly": true
     }
