--- a/base-configs/tsconfig.base.json
+++ b/base-configs/tsconfig.base.json
@@ -6,8 +6,8 @@
         "exactOptionalPropertyTypes": true,
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
+        "module": "CommonJS",
+        "moduleResolution": "Node",
         "noEmitOnError": false,
         "noImplicitAny": true,
         "noImplicitOverride": true,
@@ -24,7 +24,7 @@
     },
     "ts-node": {
         "compilerOptions": {
-            "module": "NodeNext"
+            "module": "CommonJS"
         },
         "transpileOnly": true
     }
