--- a/configs/.prettierignore
+++ b/configs/.prettierignore
@@ -1,11 +1,11 @@
+**/all-files-for-code-coverage.test.ts
+**/coverage/
+**/dist-*/
+**/dist/
+**/generated-config-*
+**/graphics/
+**/node_modules/
+**/package-lock.json
+**/ts.out/
+**/tsconfig.tsbuildinfo
 /Icon?
-coverage/
-dist/
-dist-docs/
-generated-config-*
-graphics/
-node_modules/
-package-lock.json
-src/all-files-for-code-coverage.test.ts
-ts.out/
-tsconfig.tsbuildinfo
