--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,13 @@
+**/all-files-for-code-coverage.test.ts
+**/coverage/
+**/dist-*/
+**/dist/
+**/generated-config-*
+**/graphics/
+**/node_modules/
+**/package-lock.json
+**/ts.out/
+**/tsconfig.tsbuildinfo
 /Icon?
-coverage/
-dist/
-dist-*/
-node_modules/
-package-lock.json
+
 test-files/format/
