--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "11.1.2",
+    "version": "11.1.3",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -72,29 +72,29 @@
         "chai": "^4.3.10",
         "cspell": "^8.0.0",
         "dependency-cruiser": "^15.3.0",
-        "element-vir": "^17.0.0",
+        "element-vir": "^17.0.1",
         "esbuild": "^0.19.6",
         "fs-extra": "^11.1.1",
-        "istanbul-smart-text-reporter": "^1.1.2",
-        "markdown-code-example-inserter": "^0.3.2",
+        "istanbul-smart-text-reporter": "^1.1.3",
+        "markdown-code-example-inserter": "^0.3.3",
         "mocha": "^10.2.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
         "npm-check-updates": "~16.12.3",
         "prettier": "^3.1.0",
-        "prettier-plugin-interpolated-html-tags": "^1.0.2",
+        "prettier-plugin-interpolated-html-tags": "^1.0.3",
         "prettier-plugin-jsdoc": "^1.1.1",
-        "prettier-plugin-multiline-arrays": "^3.0.0",
+        "prettier-plugin-multiline-arrays": "^3.0.1",
         "prettier-plugin-organize-imports": "^3.2.4",
         "prettier-plugin-packagejson": "^2.4.6",
         "prettier-plugin-sort-json": "^3.1.0",
         "prettier-plugin-toml": "^1.0.0",
-        "test-as-package": "^0.0.4",
-        "test-established-expectations": "^0.5.0",
+        "test-as-package": "^0.0.5",
+        "test-established-expectations": "^0.5.1",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
         "typedoc": "^0.25.3",
-        "typescript": "^5.2.2",
-        "virmator": "^11.1.1",
+        "typescript": "5.2.2",
+        "virmator": "^11.1.2",
         "vite": "^4.5.0",
         "vite-tsconfig-paths": "^4.2.1"
     },
