--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "11.1.3",
+    "version": "11.1.4",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -43,8 +43,8 @@
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "^22.0.0",
-        "@augment-vir/node-js": "^22.0.0",
+        "@augment-vir/common": "^22.0.1",
+        "@augment-vir/node-js": "^22.0.1",
         "ansi-colors": "^4.1.3",
         "concurrently": "^8.2.2",
         "glob": "^8.1.0",
@@ -52,18 +52,18 @@
         "mono-vir": "^0.1.7",
         "semver": "^7.5.4",
         "simple-git": "^3.21.0",
-        "type-fest": "^4.8.1"
+        "type-fest": "^4.8.2"
     },
     "devDependencies": {
         "@electrovir/nyc": "15.1.0-fix0",
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@open-wc/testing": "^4.0.0",
-        "@types/chai": "^4.3.10",
+        "@types/chai": "^4.3.11",
         "@types/fs-extra": "^11.0.4",
         "@types/glob": "^8.1.0",
-        "@types/mocha": "^10.0.4",
-        "@types/node": "^20.9.2",
-        "@types/semver": "^7.5.5",
+        "@types/mocha": "^10.0.6",
+        "@types/node": "^20.10.0",
+        "@types/semver": "^7.5.6",
         "@web/dev-server-esbuild": "^1.0.1",
         "@web/test-runner": "^0.18.0",
         "@web/test-runner-commands": "^0.9.0",
@@ -71,9 +71,9 @@
         "@web/test-runner-visual-regression": "^0.9.0",
         "chai": "^4.3.10",
         "cspell": "^8.0.0",
-        "dependency-cruiser": "^15.3.0",
-        "element-vir": "^17.0.1",
-        "esbuild": "^0.19.6",
+        "dependency-cruiser": "^15.4.0",
+        "element-vir": "^17.0.3",
+        "esbuild": "^0.19.7",
         "fs-extra": "^11.1.1",
         "istanbul-smart-text-reporter": "^1.1.3",
         "markdown-code-example-inserter": "^0.3.3",
@@ -94,7 +94,7 @@
         "tsconfig-paths": "^4.2.0",
         "typedoc": "^0.25.3",
         "typescript": "5.2.2",
-        "virmator": "^11.1.2",
+        "virmator": "*",
         "vite": "^4.5.0",
         "vite-tsconfig-paths": "^4.2.1"
     },
