[minor] add useDefineForClassFields to base tsconfig

--- a/base-configs/tsconfig.base.json
+++ b/base-configs/tsconfig.base.json
@@ -20,6 +20,7 @@
         "skipLibCheck": true,
         "strict": true,
         "target": "ES2021",
+        "useDefineForClassFields": true,
         "useUnknownInCatchVariables": true
     },
     "ts-node": {
