--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "11.1.5",
+    "version": "11.2.0",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -43,15 +43,15 @@
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "^22.1.1",
-        "@augment-vir/node-js": "^22.1.1",
+        "@augment-vir/common": "^22.4.0",
+        "@augment-vir/node-js": "^22.4.0",
         "ansi-colors": "^4.1.3",
         "concurrently": "^8.2.2",
         "glob": "^8.1.0",
         "glob-promise": "^6.0.5",
         "mono-vir": "^0.1.7",
         "semver": "^7.5.4",
-        "simple-git": "^3.21.0",
+        "simple-git": "^3.22.0",
         "type-fest": "^4.9.0"
     },
     "devDependencies": {
@@ -62,18 +62,18 @@
         "@types/fs-extra": "^11.0.4",
         "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.6",
-        "@types/node": "^20.10.5",
+        "@types/node": "^20.11.0",
         "@types/semver": "^7.5.6",
         "@web/dev-server-esbuild": "^1.0.1",
         "@web/test-runner": "^0.18.0",
         "@web/test-runner-commands": "^0.9.0",
         "@web/test-runner-playwright": "^0.11.0",
         "@web/test-runner-visual-regression": "^0.9.0",
-        "chai": "^5.0.0",
-        "cspell": "^8.2.4",
-        "dependency-cruiser": "^15.5.0",
-        "element-vir": "^18.0.0",
-        "esbuild": "^0.19.10",
+        "chai": "^4.3.10",
+        "cspell": "^8.3.2",
+        "dependency-cruiser": "^16.0.0",
+        "element-vir": "^19.0.0",
+        "esbuild": "^0.19.11",
         "fs-extra": "^11.2.0",
         "istanbul-smart-text-reporter": "^1.1.3",
         "markdown-code-example-inserter": "^0.3.3",
@@ -85,20 +85,21 @@
         "prettier-plugin-jsdoc": "^1.3.0",
         "prettier-plugin-multiline-arrays": "^3.0.1",
         "prettier-plugin-organize-imports": "^3.2.4",
-        "prettier-plugin-packagejson": "^2.4.8",
+        "prettier-plugin-packagejson": "^2.4.9",
         "prettier-plugin-sort-json": "^3.1.0",
         "prettier-plugin-toml": "^2.0.1",
         "test-as-package": "^0.0.5",
         "test-established-expectations": "^0.5.1",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typedoc": "^0.25.4",
-        "typescript": "5.2.2",
-        "virmator": "*",
+        "typedoc": "^0.25.7",
+        "typescript": "5.3.3",
+        "virmator": "file:./",
         "vite": "^4.5.0",
-        "vite-tsconfig-paths": "^4.2.2"
+        "vite-tsconfig-paths": "^4.2.3"
     },
     "overrides": {
-        "semver": "^7.5.4"
+        "semver": "^7.5.4",
+        "virmator": "*"
     }
 }
