--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "11.3.0",
+    "version": "11.3.1",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -62,7 +62,7 @@
         "@types/fs-extra": "^11.0.4",
         "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.6",
-        "@types/node": "^20.11.0",
+        "@types/node": "^20.11.5",
         "@types/semver": "^7.5.6",
         "@web/dev-server-esbuild": "^1.0.1",
         "@web/test-runner": "^0.18.0",
@@ -72,7 +72,7 @@
         "chai": "^4.3.10",
         "cspell": "^8.3.2",
         "dependency-cruiser": "^16.0.0",
-        "element-vir": "^20.0.0",
+        "element-vir": "^20.0.6",
         "esbuild": "^0.19.11",
         "fs-extra": "^11.2.0",
         "istanbul-smart-text-reporter": "^1.1.3",
@@ -80,7 +80,7 @@
         "mocha": "^10.2.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
         "npm-check-updates": "~16.12.3",
-        "prettier": "^3.2.2",
+        "prettier": "3.2.2",
         "prettier-plugin-interpolated-html-tags": "^1.0.3",
         "prettier-plugin-jsdoc": "^1.3.0",
         "prettier-plugin-multiline-arrays": "^3.0.1",
@@ -94,9 +94,9 @@
         "tsconfig-paths": "^4.2.0",
         "typedoc": "^0.25.7",
         "typescript": "5.3.3",
-        "virmator": "file:./",
+        "virmator": "^11.3.0",
         "vite": "^4.5.0",
-        "vite-tsconfig-paths": "^4.2.3"
+        "vite-tsconfig-paths": "^4.3.1"
     },
     "overrides": {
         "semver": "^7.5.4",
