--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "11.3.2",
+    "version": "11.3.3",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -34,7 +34,7 @@
         "docs:check": "npm run compile && ts-node src/scripts/save-help-message.ts check && md-code --check README.md",
         "format": "npm run format:base -- --write --list-different",
         "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\" --config .prettierrc.js",
-        "publish": "virmator publish \"npm run test:all\"",
+        "publish": "npm run compile && npm ci && virmator publish \"npm run test:all\"",
         "test": "npm run compile && test-as-package mocha --config mocha.config.js",
         "test:all": "npm ci && concurrently --color --kill-others-on-fail -c auto --names tests,spelling,format,docs \"npm run compile && npm run test\" \"npm run test:spelling -- --no-progress\" \"npm run test:format\" \"npm run docs:check\"",
         "test:format": "npm run format:base -- --check",
@@ -62,7 +62,7 @@
         "@types/fs-extra": "^11.0.4",
         "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.6",
-        "@types/node": "^20.11.17",
+        "@types/node": "^20.11.19",
         "@types/semver": "^7.5.7",
         "@web/dev-server-esbuild": "^1.0.2",
         "@web/test-runner": "^0.18.0",
@@ -80,12 +80,12 @@
         "mocha": "^10.3.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
         "npm-check-updates": "~16.12.3",
-        "prettier": "3.2.2",
+        "prettier": "^3.2.5",
         "prettier-plugin-interpolated-html-tags": "^1.0.3",
         "prettier-plugin-jsdoc": "^1.3.0",
         "prettier-plugin-multiline-arrays": "^3.0.3",
         "prettier-plugin-organize-imports": "^3.2.4",
-        "prettier-plugin-packagejson": "^2.4.10",
+        "prettier-plugin-packagejson": "^2.4.11",
         "prettier-plugin-sort-json": "^3.1.0",
         "prettier-plugin-toml": "^2.0.1",
         "test-as-package": "^0.0.5",
@@ -94,7 +94,7 @@
         "tsconfig-paths": "^4.2.0",
         "typedoc": "^0.25.8",
         "typescript": "5.3.3",
-        "virmator": "^11.3.1",
+        "virmator": "./",
         "vite": "^4.5.0",
         "vite-tsconfig-paths": "^4.3.1"
     },
