--- a/configs/.github/workflows/tests.yml
+++ b/configs/.github/workflows/tests.yml
@@ -13,9 +13,9 @@ jobs:
             matrix:
                 os: [ubuntu-latest, windows-latest, macos-latest]
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4.1.1
             - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v3
+              uses: actions/checkout@v4.0.2
               with:
                   node-version-file: '.nvmrc'
             - name: run test
