--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -13,7 +13,7 @@ jobs:
         steps:
             - uses: actions/checkout@v4.1.1
             - name: Use Node.js
-              uses: actions/checkout@v4.0.2
+              uses: actions/setup-node@v4.0.2
               with:
                   node-version-file: '.nvmrc'
             - name: run test
