--- a/configs/.github/workflows/build-for-gh-pages.yml
+++ b/configs/.github/workflows/build-for-gh-pages.yml
@@ -11,7 +11,7 @@ jobs:
 
         steps:
             - uses: actions/checkout@v4.1.1
-            - uses: actions/checkout@v4.0.2
+            - uses: actions/setup-node@v4.0.2
               with:
                   node-version-file: '.nvmrc'
             - name: build
