--- a/configs/.github/workflows/tests.yml
+++ b/configs/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
         steps:
             - uses: actions/checkout@v4.1.1
             - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/checkout@v4.0.2
+              uses: actions/setup-node@v4.0.2
               with:
                   node-version-file: '.nvmrc'
             - name: run test
