--- a/base-configs/tsconfig.base.json
+++ b/base-configs/tsconfig.base.json
@@ -6,7 +6,7 @@
         "exactOptionalPropertyTypes": true,
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
-        "module": "CommonJS",
+        "module": "ES2022",
         "moduleResolution": "Node",
         "noEmitOnError": false,
         "noImplicitAny": true,
