--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "12.0.1",
+    "version": "12.0.2",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -43,8 +43,8 @@
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "^28.1.1",
-        "@augment-vir/node-js": "^28.1.1",
+        "@augment-vir/common": "^29.1.2",
+        "@augment-vir/node-js": "^29.1.2",
         "ansi-colors": "^4.1.3",
         "concurrently": "^8.2.2",
         "fs-extra": "^11.2.0",
@@ -62,8 +62,8 @@
         "@types/chai": "^4.3.16",
         "@types/fs-extra": "^11.0.4",
         "@types/glob": "^8.1.0",
-        "@types/mocha": "^10.0.6",
-        "@types/node": "^20.14.2",
+        "@types/mocha": "^10.0.7",
+        "@types/node": "^20.14.8",
         "@types/semver": "^7.5.8",
         "@web/dev-server-esbuild": "^1.0.2",
         "@web/test-runner": "^0.18.2",
@@ -71,7 +71,7 @@
         "@web/test-runner-playwright": "^0.11.0",
         "@web/test-runner-visual-regression": "^0.9.0",
         "chai": "^4.3.10",
-        "cspell": "^8.8.4",
+        "cspell": "^8.9.1",
         "dependency-cruiser": "^16.3.3",
         "element-vir": "^22.2.2",
         "esbuild": "^0.21.5",
@@ -92,8 +92,8 @@
         "test-established-expectations": "^1.0.0",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typedoc": "^0.25.13",
-        "typescript": "5.4.5",
+        "typedoc": "^0.26.0",
+        "typescript": "^5.5.2",
         "virmator": "./",
         "vite": "^4.5.0",
         "vite-tsconfig-paths": "^4.3.2"
