--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "12.0.2",
+    "version": "12.0.3",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -43,27 +43,27 @@
         "test:types": "tsc --noEmit"
     },
     "dependencies": {
-        "@augment-vir/common": "^29.1.2",
-        "@augment-vir/node-js": "^29.1.2",
+        "@augment-vir/common": "^29.3.0",
+        "@augment-vir/node-js": "^29.3.0",
         "ansi-colors": "^4.1.3",
         "concurrently": "^8.2.2",
         "fs-extra": "^11.2.0",
         "glob": "^8.1.0",
         "glob-promise": "^6.0.7",
         "mono-vir": "^1.0.1",
-        "semver": "^7.6.2",
+        "semver": "^7.6.3",
         "simple-git": "^3.25.0",
-        "type-fest": "^4.20.1"
+        "type-fest": "^4.22.1"
     },
     "devDependencies": {
-        "@electrovir/nyc": "15.1.0-fix0",
+        "@electrovir/nyc": "17.0.0",
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@open-wc/testing": "^4.0.0",
         "@types/chai": "^4.3.16",
         "@types/fs-extra": "^11.0.4",
         "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.7",
-        "@types/node": "^20.14.8",
+        "@types/node": "^20.14.11",
         "@types/semver": "^7.5.8",
         "@web/dev-server-esbuild": "^1.0.2",
         "@web/test-runner": "^0.18.2",
@@ -71,30 +71,30 @@
         "@web/test-runner-playwright": "^0.11.0",
         "@web/test-runner-visual-regression": "^0.9.0",
         "chai": "^4.3.10",
-        "cspell": "^8.9.1",
-        "dependency-cruiser": "^16.3.3",
+        "cspell": "^8.11.0",
+        "dependency-cruiser": "^16.3.7",
         "element-vir": "^22.2.2",
-        "esbuild": "^0.21.5",
+        "esbuild": "^0.23.0",
         "istanbul-smart-text-reporter": "^1.1.4",
         "markdown-code-example-inserter": "^1.0.0",
-        "mocha": "^10.4.0",
+        "mocha": "^10.6.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
         "npm-check-updates": "~16.12.3",
-        "prettier": "^3.3.2",
+        "prettier": "^3.3.3",
         "prettier-plugin-interpolated-html-tags": "^1.0.5",
         "prettier-plugin-jsdoc": "^1.3.0",
         "prettier-plugin-multiline-arrays": "^3.0.6",
-        "prettier-plugin-organize-imports": "^3.2.4",
-        "prettier-plugin-packagejson": "^2.5.0",
+        "prettier-plugin-organize-imports": "^4.0.0",
+        "prettier-plugin-packagejson": "^2.5.1",
         "prettier-plugin-sort-json": "^4.0.0",
         "prettier-plugin-toml": "^2.0.1",
         "test-as-package": "^1.0.0",
         "test-established-expectations": "^1.0.0",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typedoc": "^0.26.0",
-        "typescript": "^5.5.2",
-        "virmator": "./",
+        "typedoc": "^0.26.4",
+        "typescript": "^5.5.3",
+        "virmator": "^12.0.2",
         "vite": "^4.5.0",
         "vite-tsconfig-paths": "^4.3.2"
     },
