--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "12.0.3",
+    "version": "12.0.4",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -56,7 +56,7 @@
         "type-fest": "^4.22.1"
     },
     "devDependencies": {
-        "@electrovir/nyc": "17.0.0",
+        "@electrovir/nyc": "15.1.0-fix0",
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@open-wc/testing": "^4.0.0",
         "@types/chai": "^4.3.16",
