--- a/configs/.github/workflows/tagged-release.yml
+++ b/configs/.github/workflows/tagged-release.yml
@@ -4,6 +4,8 @@ on:
     push:
         tags:
             - 'v*'
+permissions:
+    contents: write
 
 jobs:
     tagged-release:
@@ -11,9 +13,9 @@ jobs:
         runs-on: 'ubuntu-latest'
 
         steps:
-            - uses: actions/checkout@v4.1.1
+            - uses: actions/checkout@v4.1.7
             - name: Use Node.js
-              uses: actions/setup-node@v4.0.2
+              uses: actions/setup-node@v4.0.3
               with:
                   node-version-file: '.nvmrc'
             - name: run test
