--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "virmator",
-    "version": "12.0.4",
+    "version": "13.0.0",
     "description": "Handle common package configs, commands, and dependencies.",
     "keywords": [
         "automation",
@@ -25,7 +25,9 @@
         "name": "electrovir",
         "url": "https://github.com/electrovir"
     },
+    "type": "module",
     "main": "dist/index.js",
+    "module": "dist/index.js",
     "types": "dist/index.d.ts",
     "bin": "dist/cli.js",
     "scripts": {
@@ -33,7 +35,7 @@
         "docs": "npm run compile && ts-node src/scripts/save-help-message.ts && md-code README.md",
         "docs:check": "npm run compile && ts-node src/scripts/save-help-message.ts check && md-code --check README.md",
         "format": "npm run format:base -- --write --list-different",
-        "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\" --config .prettierrc.js",
+        "format:base": "prettier \"./**/*.+(ts|json|html|css|md|js)\" --config prettier.config.mjs",
         "publish": "npm run compile && npm ci && virmator publish \"npm run test:all\"",
         "test": "npm run compile && test-as-package mocha --config mocha.config.cjs",
         "test:all": "npm ci && concurrently --color --kill-others-on-fail -c auto --names tests,spelling,format,docs \"npm run compile && npm run test\" \"npm run test:spelling -- --no-progress\" \"npm run test:format\" \"npm run docs:check\"",
@@ -48,7 +50,7 @@
         "ansi-colors": "^4.1.3",
         "concurrently": "^8.2.2",
         "fs-extra": "^11.2.0",
-        "glob": "^8.1.0",
+        "glob": "^11.0.0",
         "glob-promise": "^6.0.7",
         "mono-vir": "^1.0.1",
         "semver": "^7.6.3",
@@ -56,7 +58,7 @@
         "type-fest": "^4.22.1"
     },
     "devDependencies": {
-        "@electrovir/nyc": "15.1.0-fix0",
+        "@electrovir/nyc": "17.0.0",
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@open-wc/testing": "^4.0.0",
         "@types/chai": "^4.3.16",
@@ -70,16 +72,16 @@
         "@web/test-runner-commands": "^0.9.0",
         "@web/test-runner-playwright": "^0.11.0",
         "@web/test-runner-visual-regression": "^0.9.0",
-        "chai": "^4.3.10",
+        "chai": "^5.1.1",
         "cspell": "^8.11.0",
-        "dependency-cruiser": "^16.3.7",
+        "dependency-cruiser": "^16.3.9",
         "element-vir": "^22.2.2",
         "esbuild": "^0.23.0",
         "istanbul-smart-text-reporter": "^1.1.4",
         "markdown-code-example-inserter": "^1.0.0",
-        "mocha": "^10.6.0",
+        "mocha": "^10.7.0",
         "mocha-spec-reporter-with-file-names": "^0.0.3",
-        "npm-check-updates": "~16.12.3",
+        "npm-check-updates": "~16.14.20",
         "prettier": "^3.3.3",
         "prettier-plugin-interpolated-html-tags": "^1.0.5",
         "prettier-plugin-jsdoc": "^1.3.0",
@@ -92,10 +94,10 @@
         "test-established-expectations": "^1.0.0",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typedoc": "^0.26.4",
+        "typedoc": "^0.26.5",
         "typescript": "^5.5.3",
-        "virmator": "^12.0.2",
-        "vite": "^4.5.0",
+        "virmator": "./",
+        "vite": "^5.3.4",
         "vite-tsconfig-paths": "^4.3.2"
     },
     "overrides": {
