--- a/packages/compile/configs/tsconfig.base.json
+++ b/packages/compile/configs/tsconfig.base.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "alwaysStrict": true,
+        "composite": true,
         "declaration": true,
         "esModuleInterop": true,
         "exactOptionalPropertyTypes": true,
