--- a/packages/virmator/tsconfig.json
+++ b/packages/virmator/tsconfig.json
@@ -18,6 +18,9 @@
             "path": "../core"
         },
         {
+            "path": "../spellcheck"
+        },
+        {
             "path": "../compile"
         }
     ]
