--- a/packages/deps/package.json
+++ b/packages/deps/package.json
@@ -40,7 +40,8 @@
     },
     "devDependencies": {
         "dependency-cruiser": "^16.3.10",
-        "esbuild": "^0.23.0"
+        "esbuild": "^0.23.0",
+        "npm-check-updates": "^16.14.20"
     },
     "publishConfig": {
         "access": "public"
