add deps regen command

--- a/packages/deps/configs/c8.config.json
+++ b/packages/deps/configs/c8.config.json
@@ -4,6 +4,10 @@
     "checkCoverage": true,
     "clean": true,
     "perFile": true,
+    "reporter": [
+        "html",
+        "text"
+    ],
     "skipFull": true,
     "src": "src"
 }
