--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,14 +39,17 @@
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
+        "chalk": "^5.3.0",
         "cli-args-vir": "^0.0.3",
         "run-time-assertions": "^1.5.2",
-        "type-fest": "^4.23.0"
+        "type-fest": "^4.23.0",
+        "typescript": "^5.5.4"
     },
     "devDependencies": {
         "@augment-vir/testing": "^29.3.0",
         "@types/node": "^20.14.12",
         "concurrently": "^8.2.2",
+        "esbuild": "^0.23.0",
         "mono-vir": "^1.0.1"
     },
     "publishConfig": {
