--- a/packages/virmator/package.json
+++ b/packages/virmator/package.json
@@ -26,15 +26,18 @@
         "url": "https://github.com/electrovir"
     },
     "type": "module",
-    "main": "dist/index.js",
-    "module": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "bin": "dist/cli.js",
+    "main": "src/index.ts",
+    "module": "src/index.ts",
+    "types": "src/index.ts",
+    "bin": "src/cli.ts",
     "dependencies": {
         "@augment-vir/node-js": "^29.3.0",
         "@virmator/compile": "^13.0.0",
         "@virmator/core": "^13.0.0",
+        "@virmator/deps": "^13.0.0",
+        "@virmator/docs": "^13.0.0",
         "@virmator/spellcheck": "^13.0.0",
+        "tsx": "^4.16.2",
         "type-fest": "^4.23.0"
     },
     "devDependencies": {
