--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -18,22 +18,7 @@
             "path": "../core"
         },
         {
-            "path": "../spellcheck"
-        },
-        {
-            "path": "../frontend"
-        },
-        {
-            "path": "../deps"
-        },
-        {
-            "path": "../docs"
-        },
-        {
-            "path": "../format"
-        },
-        {
-            "path": "../compile"
+            "path": "../plugin-testing"
         }
     ]
 }
