--- a/packages/virmator/package.json
+++ b/packages/virmator/package.json
@@ -37,6 +37,7 @@
         "@virmator/deps": "^13.0.0",
         "@virmator/docs": "^13.0.0",
         "@virmator/format": "^13.0.0",
+        "@virmator/frontend": "^13.0.0",
         "@virmator/spellcheck": "^13.0.0",
         "tsx": "^4.16.2",
         "type-fest": "^4.23.0"
