--- a/packages/virmator/package.json
+++ b/packages/virmator/package.json
@@ -38,6 +38,7 @@
         "@virmator/docs": "^13.0.0",
         "@virmator/format": "^13.0.0",
         "@virmator/frontend": "^13.0.0",
+        "@virmator/publish": "^13.0.0",
         "@virmator/spellcheck": "^13.0.0",
         "@virmator/test": "^13.0.0",
         "tsx": "^4.16.2",
