--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -35,6 +35,7 @@
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
+        "@virmator/core": "^13.0.0",
         "chalk": "^5.3.0",
         "mri": "^1.2.0",
         "run-time-assertions": "^1.5.2"
