--- a/packages/format/package.json
+++ b/packages/format/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
+        "@virmator/core": "^13.0.0",
         "mri": "^1.2.0"
     },
     "devDependencies": {
