--- a/packages/publish/package.json
+++ b/packages/publish/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "@virmator/test",
+    "name": "@virmator/publish",
     "version": "13.0.0",
-    "description": "Default test plugin for virmator.",
+    "description": "Default publish plugin for virmator.",
     "keywords": [
         "virmator",
-        "test",
-        "node",
-        "web",
-        "browser"
+        "npm",
+        "publish",
+        "deploy",
+        "pipeline"
     ],
     "homepage": "https://github.com/electrovir/virmator",
     "bugs": {
@@ -23,9 +23,9 @@
         "url": "https://github.com/electrovir"
     },
     "type": "module",
-    "main": "src/test.ts",
-    "module": "src/test.ts",
-    "types": "src/test.ts",
+    "main": "src/publish.ts",
+    "module": "src/publish.ts",
+    "types": "src/publish.ts",
     "scripts": {
         "test": "tsx --test --experimental-test-snapshots --test-reporter spec 'src/**/*.test.ts'",
         "test:all": "concurrently --colors --kill-others-on-fail -c auto --names tests \"npm run test:coverage\"",
@@ -35,22 +35,20 @@
     },
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
+        "@augment-vir/node-js": "^29.3.0",
         "@virmator/core": "^13.0.0",
-        "glob": "^11.0.0",
-        "mri": "^1.2.0"
+        "chalk": "^5.3.0",
+        "mri": "^1.2.0",
+        "run-time-assertions": "^1.5.2",
+        "semver": "^7.6.3",
+        "simple-git": "^3.25.0"
     },
     "devDependencies": {
-        "@open-wc/testing": "^4.0.0",
-        "@types/mocha": "^10.0.7",
         "@types/node": "^22.0.0",
-        "@web/dev-server-esbuild": "^1.0.2",
-        "@web/test-runner": "^0.18.2",
-        "@web/test-runner-commands": "^0.9.0",
-        "@web/test-runner-playwright": "^0.11.0",
-        "@web/test-runner-visual-regression": "^0.9.0",
-        "c8": "^10.1.2",
-        "istanbul-smart-text-reporter": "^1.1.4",
-        "tsx": "^4.16.2"
+        "@types/semver": "^7.5.8",
+        "markdown-code-example-inserter": "^1.0.0",
+        "type-fest": "^4.23.0",
+        "typedoc": "^0.26.5"
     },
     "publishConfig": {
         "access": "public"
