--- a/packages/publish/tsconfig.json
+++ b/packages/publish/tsconfig.json
@@ -9,16 +9,12 @@
         "./dist",
         "./dist-*",
         "./node_modules",
-        "./test-files",
-        "./ts.out"
+        "./test-files"
     ],
     "extends": "../../configs/tsconfig.base.json",
     "references": [
         {
             "path": "../core"
-        },
-        {
-            "path": "../plugin-testing"
         }
     ]
 }
