--- a/packages/virmator/tsconfig.json
+++ b/packages/virmator/tsconfig.json
@@ -9,8 +9,7 @@
         "./dist",
         "./dist-*",
         "./node_modules",
-        "./test-files",
-        "./ts.out"
+        "./test-files"
     ],
     "extends": "../../configs/tsconfig.base.json",
     "references": [
@@ -25,6 +24,9 @@
         },
         {
             "path": "../deps"
+        },
+        {
+            "path": "../init"
         },
         {
             "path": "../test"
