--- a/packages/spellcheck/tsconfig.json
+++ b/packages/spellcheck/tsconfig.json
@@ -9,8 +9,7 @@
         "./dist",
         "./dist-*",
         "./node_modules",
-        "./test-files",
-        "./ts.out"
+        "./test-files"
     ],
     "extends": "../../configs/tsconfig.base.json",
     "references": [
