--- a/packages/virmator/package.json
+++ b/packages/virmator/package.json
@@ -30,6 +30,13 @@
     "module": "src/index.ts",
     "types": "src/index.ts",
     "bin": "src/cli.ts",
+    "scripts": {
+        "test": "tsx --test --experimental-test-snapshots --test-reporter spec 'src/**/*.test.ts'",
+        "test:all": "concurrently --colors --kill-others-on-fail --kill-signal SIGKILL -c auto --names tests \"npm run test:coverage\"",
+        "test:coverage": "c8 --config configs/c8.config.json npm test",
+        "test:types": "tsc -b -f --pretty",
+        "test:update": "tsx --test --experimental-test-snapshots --test-update-snapshots --test-reporter spec 'src/**/*.test.ts'"
+    },
     "dependencies": {
         "@augment-vir/node-js": "^29.3.0",
         "@virmator/compile": "^13.0.0",
@@ -38,6 +45,7 @@
         "@virmator/docs": "^13.0.0",
         "@virmator/format": "^13.0.0",
         "@virmator/frontend": "^13.0.0",
+        "@virmator/init": "^13.0.0",
         "@virmator/publish": "^13.0.0",
         "@virmator/spellcheck": "^13.0.0",
         "@virmator/test": "^13.0.0",
