automatically install plugin dependencies

--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
         "docs": "virmator docs",
         "format": "virmator format",
         "publish": "virmator publish \"npm run compile && npm run test:all\"",
-        "test": "virmator test",
+        "test": "mono-vir for-each-async npm run test",
         "test:all": "npm run compile && concurrently --colors --kill-others-on-fail --kill-signal SIGKILL -c auto --names tests,spelling,format,docs,deps \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\" \"npm run test:deps\"",
         "test:coverage": "npm run test coverage",
         "test:deps": "virmator deps check",
         "test:docs": "virmator docs check",
         "test:format": "virmator format check",
         "test:spelling": "virmator spellcheck",
-        "test:types": "npm run compile"
+        "test:update": "mono-vir for-each-async npm run test:update"
     },
     "devDependencies": {
         "mono-vir": "^1.0.1",
