--- a/packages/init/configs/package-mono-package-node/package.json
+++ b/packages/init/configs/package-mono-package-node/package.json
@@ -10,7 +10,8 @@
         "start": "tsx src/index.ts",
         "test": "virmator test node",
         "test:coverage": "npm run test coverage",
-        "test:docs": "virmator docs check"
+        "test:docs": "virmator docs check",
+        "test:update": "npm test update"
     },
     "publishConfig": {
         "access": "public"
