--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,10 +30,10 @@
     "module": "src/index.ts",
     "types": "src/index.ts",
     "scripts": {
+        "compile": "virmator compile",
         "test": "tsx --test --experimental-test-snapshots --test-reporter spec 'src/**/*.test.ts'",
         "test:all": "concurrently --colors --kill-others-on-fail --kill-signal SIGKILL -c auto --names tests \"npm run test:coverage\"",
         "test:coverage": "c8 --config configs/c8.config.json npm test",
-        "test:types": "tsc -b -f --pretty",
         "test:update": "tsx --test --experimental-test-snapshots --test-update-snapshots --test-reporter spec 'src/**/*.test.ts'"
     },
     "dependencies": {
@@ -42,12 +42,14 @@
         "chalk": "^5.3.0",
         "cli-args-vir": "^0.0.3",
         "run-time-assertions": "^1.5.2",
+        "semver": "^7.6.3",
         "type-fest": "^4.23.0",
         "typescript": "^5.5.4"
     },
     "devDependencies": {
         "@augment-vir/testing": "^29.3.0",
         "@types/node": "^20.14.12",
+        "@types/semver": "^7.5.8",
         "concurrently": "^8.2.2",
         "esbuild": "^0.23.0",
         "mono-vir": "^1.0.1"
