--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -28,9 +28,9 @@
     "module": "src/frontend.ts",
     "types": "src/frontend.ts",
     "scripts": {
+        "compile": "virmator compile",
         "test": "tsx --test --experimental-test-snapshots --test-reporter spec 'src/**/*.test.ts'",
-        "test:all": "concurrently --colors --kill-others-on-fail --kill-signal SIGKILL -c auto --names tests \"npm run test\"",
-        "test:types": "tsc -b -f --pretty",
+        "test:coverage": "npm test",
         "test:update": "tsx --test --experimental-test-snapshots --test-update-snapshots --test-reporter spec 'src/**/*.test.ts'"
     },
     "dependencies": {
