--- a/packages/init/configs/package-top-package-node/package.json
+++ b/packages/init/configs/package-top-package-node/package.json
@@ -16,6 +16,7 @@
         "test:deps": "virmator deps check",
         "test:docs": "virmator docs check",
         "test:format": "virmator format check",
-        "test:spelling": "virmator spellcheck"
+        "test:spelling": "virmator spellcheck",
+        "test:update": "npm run test update"
     }
 }
