--- a/packages/init/package.json
+++ b/packages/init/package.json
@@ -24,13 +24,17 @@
     "module": "src/init.ts",
     "types": "src/init.ts",
     "scripts": {
-        "test:types": "tsc -b -f --pretty"
+        "compile": "virmator compile",
+        "test:coverage": "exit 0",
+        "test:update": "exit 0"
     },
     "dependencies": {
         "@augment-vir/common": "^29.3.0"
     },
     "devDependencies": {
-        "@types/node": "^22.0.0"
+        "@types/node": "^22.0.0",
+        "element-vir": "^22.2.2",
+        "tsx": "^4.16.3"
     },
     "publishConfig": {
         "access": "public"
