--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "format": "virmator format",
         "publish": "virmator publish \"npm run compile && npm run test:all\"",
         "test": "mono-vir for-each-async npm run test",
-        "test:all": "npm run compile && concurrently --colors --kill-others-on-fail --kill-signal SIGKILL -c auto --names tests,spelling,format,docs,deps \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\" \"npm run test:deps\"",
-        "test:coverage": "npm run test coverage",
+        "test:all": "npm run compile && concurrently --colors --kill-others-on-fail -c auto --names tests,spelling,format,docs,deps \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\" \"npm run test:deps\"",
+        "test:coverage": "mono-vir for-each-async npm run test:coverage",
         "test:deps": "virmator deps check",
         "test:docs": "virmator docs check",
         "test:format": "virmator format check",
@@ -21,6 +21,7 @@
         "test:update": "mono-vir for-each-async npm run test:update"
     },
     "devDependencies": {
+        "cspell": "^8.12.1",
         "mono-vir": "^1.0.1",
         "npm-check-updates": "^16.14.20",
         "prettier": "^3.3.3",
