--- a/packages/init/configs/package-top-package-web/package.json
+++ b/packages/init/configs/package-top-package-web/package.json
@@ -12,7 +12,7 @@
         "publish": "virmator publish npm run test:all",
         "start": "virmator frontend",
         "test": "virmator test web",
-        "test:all": "npm run compile && concurrently --colors --kill-others-on-fail --kill-signal SIGKILL -c auto --names tests,spelling,format,docs,deps \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\" \"npm run test:deps\"",
+        "test:all": "npm run compile && concurrently --colors --kill-others-on-fail -c auto --names tests,spelling,format,docs,deps \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\" \"npm run test:deps\"",
         "test:coverage": "npm run test coverage",
         "test:deps": "virmator deps check",
         "test:docs": "virmator docs check",
