--- a/packages/virmator/package.json
+++ b/packages/virmator/package.json
@@ -32,9 +32,9 @@
     "bin": "src/cli.ts",
     "scripts": {
         "compile": "virmator compile",
-        "test": "tsx --test --experimental-test-snapshots --test-reporter spec 'src/**/*.test.ts'",
-        "test:coverage": "c8 --config configs/c8.config.json npm test",
-        "test:update": "tsx --test --experimental-test-snapshots --test-update-snapshots --test-reporter spec 'src/**/*.test.ts'"
+        "test": "virmator test node",
+        "test:coverage": "npm test coverage",
+        "test:update": "npm test update"
     },
     "dependencies": {
         "@augment-vir/node-js": "^29.3.0",
