--- a/packages/spellcheck/package.json
+++ b/packages/spellcheck/package.json
@@ -26,9 +26,9 @@
     "types": "src/spellcheck.ts",
     "scripts": {
         "compile": "virmator compile",
-        "test": "tsx --test --experimental-test-snapshots --test-reporter spec 'src/**/*.test.ts'",
-        "test:coverage": "c8 --config configs/c8.config.json npm test",
-        "test:update": "tsx --test --experimental-test-snapshots --test-update-snapshots --test-reporter spec 'src/**/*.test.ts'"
+        "test": "virmator test node",
+        "test:coverage": "npm test coverage",
+        "test:update": "npm test update"
     },
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
