test coverage for testing-plugins package

--- a/packages/deps/configs/c8.config.json
+++ b/packages/deps/configs/c8.config.json
@@ -6,7 +6,7 @@
     "perFile": true,
     "reporter": [
         "html",
-        "text"
+        "istanbul-smart-text-reporter"
     ],
     "skipFull": true,
     "src": "src"
