--- a/packages/spellcheck/configs/c8.config.json
+++ b/packages/spellcheck/configs/c8.config.json
@@ -4,6 +4,10 @@
     "checkCoverage": true,
     "clean": true,
     "perFile": true,
+    "reporter": [
+        "html",
+        "istanbul-smart-text-reporter"
+    ],
     "skipFull": true,
     "src": "src"
 }
