--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "devDependencies": {
         "cspell": "^8.12.1",
+        "markdown-code-example-inserter": "^1.0.0",
         "mono-vir": "^1.0.1",
         "npm-check-updates": "^16.14.20",
         "prettier": "^3.3.3",
