add lint plugin; don't copy configs if user specifies their own

--- a/packages/virmator/package.json
+++ b/packages/virmator/package.json
@@ -46,11 +46,11 @@
         "@virmator/frontend": "^13.0.0",
         "@virmator/help": "^13.0.0",
         "@virmator/init": "^13.0.0",
+        "@virmator/lint": "^13.0.0",
         "@virmator/publish": "^13.0.0",
         "@virmator/spellcheck": "^13.0.0",
         "@virmator/test": "^13.0.0",
-        "tsx": "^4.16.2",
-        "type-fest": "^4.23.0"
+        "tsx": "^4.16.2"
     },
     "devDependencies": {
         "@types/node": "^20.14.12"
